[tool.poetry]
authors = ["Idein Inc."]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
description = "Core components of actfw, independent of specific devices"
keywords = ['actcast']
license = "MIT"
name = "actfw-core"
readme = "README.md"
repository = "https://github.com/Idein/actfw-core"
version = "2.8.0"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = ">=5, <11"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.0"
cryptography = "^3.4.7"
pyOpenSSL = "^20.0.1"
pyproject-indirect-import-detector = "^0.1.2"
pysen = { version = "^0.10.1" }
pytest = "^6.2.3"
sphinx-theme = "^1.0"
black = "^23"
flake8 = "3.9.2"
flake8-bugbear = "21.9.2"
isort = "5.1.4"
mypy = "^1"
types-pillow = ">=5"
types-pyopenssl = ">=20"
types-setuptools = "^69"

[tool.poetry.urls]
"Repository" = "https://github.com/Idein/actfw-core"
"Documentation" = "https://idein.github.io/actfw-core/latest/"
"Changelog" = "https://github.com/Idein/actfw-core/blob/master/CHANGELOG.md"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 128
py_version = "py38"

[[tool.pysen.lint.mypy_targets]]
paths = ["."]

[tool.pyproject-indirect-import-detector]
exclude_projects = ["dataclasses"]
exclude_modules = [
    "dataclasses",
    "OpenSSL",     # Conditional export
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
