[project]
authors = [{ name = "Idein Inc." }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "Pillow>=5,<11",
    "typing-extensions>=4.15,<5",
]
description = "Core components of actfw, independent of specific devices"
keywords = ["actcast"]
license = "MIT"
name = "actfw-core"
readme = "README.md"
requires-python = ">=3.9, <3.12"
version = "2.18.0"

[project.urls]
"Repository" = "https://github.com/Idein/actfw-core"
"Documentation" = "https://idein.github.io/actfw-core/latest/"
"Changelog" = "https://github.com/Idein/actfw-core/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "Sphinx>=4.3,<5",
    "cryptography>=3.4.7,<4",
    "pyOpenSSL>=20.0.1,<21",
    "pytest>=6.2.3,<7",
    "ruff>=0.15,<0.16",
    "sphinx-theme>=1.0,<2",
    "sphinxcontrib-applehelp<1.0.3",
    "sphinxcontrib-devhelp<1.0.3",
    "sphinxcontrib-htmlhelp<2.0.1",
    "sphinxcontrib-qthelp<1.0.4",
    "sphinxcontrib-serializinghtml<1.1.6",
    "mypy>=1,<2",
    "types-pillow>=5",
    "types-pyopenssl>=20",
]

[tool.ruff]
line-length = 128
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["B028", "B904", "E501", "E721"]
external = ["B950"]

[tool.mypy]
strict = true
python_version = "3.9"
files = ["actfw_core/"]
disallow_any_generics = false
ignore_missing_imports = true
implicit_reexport = true
warn_unused_ignores = false

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.27"]

[tool.hatch.build.targets.wheel]
packages = ["actfw_core"]
