[tool.poetry]
authors = ["Idein Inc."]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
description = "Core components of actfw, independent of specific devices"
keywords = ['actcast']
license = "MIT"
name = "actfw-core"
readme = "README.md"
repository = "https://github.com/Idein/actfw-core"
version = "2.19.0"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
Pillow = ">=5, <11"
typing-extensions = "^4.15.0"

[tool.poetry.group.dev.dependencies]
Sphinx = "^4.3.0"
cryptography = "^3.4.7"
pyOpenSSL = "^20.0.1"
pytest = "^6.2.3"
ruff = "^0.15"
sphinx-theme = "^1.0"
mypy = "^1"
types-pillow = ">=5"
types-pyopenssl = ">=20"

[tool.poetry.urls]
"Repository" = "https://github.com/Idein/actfw-core"
"Documentation" = "https://idein.github.io/actfw-core/latest/"
"Changelog" = "https://github.com/Idein/actfw-core/blob/master/CHANGELOG.md"

[tool.ruff]
line-length = 128
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["B028", "B904", "E501", "E721"]
external = ["B950"]

[tool.mypy]
strict = true
python_version = "3.9"
files = ["actfw_core/"]
disallow_any_generics = false
ignore_missing_imports = true
implicit_reexport = true
warn_unused_ignores = false

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
